--- a/ICE1-HTML/index.html
+++ b/ICE1-HTML/index.html
@@ -8,7 +8,7 @@
   	<h1> ICE 1 - Suji Kim </h1><br>
 <!--   	place holders for href links is href =# -->
   	<a href =# Bharat Nair> Bharat Nair</a> 
-  	<a href ="https://sujikim.github.io"> Suji Kim</a>
+  	<a href ="https://sujikim.github.io/ICE1-HTML"> Suji Kim</a>
   	<img src="images/sketch.jpg" alt="A hand-drawn sketch of index.hmtl"><br>
   	<img src="images/cockerpoodle.jpg" alt="Three cockerpoodle toy puppies"><br>
   	<p> These are toy cockerdoodle puppies </p><br>
