--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
   	<h1> ICE 1 - Suji Kim </h1><br>
 <!--   	place holders for href links is href =# -->
   	<a href ="SI339-ICE1-BN.github.io"> Bharat Nair</a> 
-  	<a href ="https://sujikim.github.io/"> Suji Kim</a>
+  	<a href ="https://sujikim.github.io/ICE1-HTML"> Suji Kim</a>
   	<img src="images/sketch.jpg" alt="A hand-drawn sketch of index.hmtl"><br>
   	<img src="images/cockerpoodle.jpg" alt="Three cockerpoodle toy puppies"><br>
-  	<p> These are toy cockerdoodle puppies </p><br>
+  	<p> The oldest of the designer dogs, the Cockapoo is a sweet and loving companion. He is accepting of strangers as well as other new animals. Although he will bark when people are about, the Cockapoo will more than likely invite an intruder in to share a cookie and perhaps, a cup of tea. This hybrid dog loves everybody.
+
+Playful and affectionate, the Cockapoo makes a great family companion. He is sturdy enough to play fetch and ball with the kids and cuddly enough to curl up on your lap for a warm and rejuvenating nap. To learn more about the Cockapoo, please continue reading.
+
+ </p><br>
 	<img src="http://c-7npsfqifvt34x24deo2-x78x78x78x2eephujnfx2edpn.g00.dogtime.com/g00/3_c-7ephujnf.dpn_/c-7NPSFQIFVT34x24iuuqx3ax2fx2fdeo2-x78x78x78.ephujnf.dpnx2fbttfutx2fvqmpbetx2fhbmmfszx2ftbnpzfe-epht-boe-qvqqjftx2ftbnpzfe-epht-qvqqjft-2.kqhx3fj21d.nbsl.jnbhf.uzqf_$/$/$/$/$/$" alt="A furry samoyed">
-  	<p> A white furry samoyed puppy </p><br>
+  	<p> The Samoyed is a friendly, personable dog. These are intelligent dogs, with a touch of independence. Bred to live in a tent in very close quarters with their families, they thrive on human company. Samoyeds will alarm bark and, if left alone for long periods of time, will often develop into nuisance barkers. Digging can be a problem because they dig to reach a cool resting place.
+
+Samoyeds tend to get along well with other dogs as well as people and with other pets they are raised with. They are herding dogs and may show some tendency to chase or nip. In general, they get along well with children, although they can be a little boisterous for small toddlers. </p><br>
 
   	<form>
 		Name:
@@ -31,7 +37,6 @@
   		<input type="radio" name="drink" value="tea"> Tea<br>
   		<input type="radio" name="drink" value="water"> Water<br>
 	</form>
-
 	</body>
   	 	
 
