--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
   	<h1> ICE 1 - Suji Kim </h1><br>
 <!--   	place holders for href links is href =# -->
-  	<a href ="SI339-ICE1-BN.github.io"> Bharat Nair</a> 
+  	<a href =#> Bharat Nair</a> 
   	<a href ="https://sujikim.github.io/"> Suji Kim</a>
   	<img src="images/sketch.jpg" alt="A hand-drawn sketch of index.hmtl"><br>
   	<img src="images/cockerpoodle.jpg" alt="Three cockerpoodle toy puppies"><br>
@@ -22,11 +22,18 @@ Samoyeds tend to get along well with other dogs as well as people and with other
 
  </p><br>
 
+
+<video width="400" controls>
+  <source src="media/windowdog.mp4" type="video/mp4">
+</video>
+
   	<form>
 		Name:
-		<input type="text" name="name" id = "name"></label><br>
+		<input type="text" name="name" id = "name"><br>
 		<label for="dob">DOB:</label>
-		<input type="date" name="DOB" id = "dob"><br>
+		<input type="date" name="DOB" id = "dob">(mm/dd/yyyy)<br>
+
+
 
 		Please enter your choice of snack:<br>
 		<input type="radio" name="snack" value="pizza"> Pizza<br>
