--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
   	<h1> ICE 1 - Suji Kim </h1><br>
 <!--   	place holders for href links is href =# -->
+<!-- Partner's name: Bharat Nair -->
   	<a href =#> Bharat Nair</a> 
   	<a href ="https://sujikim.github.io/"> Suji Kim</a>
   	<img src="images/sketch.jpg" alt="A hand-drawn sketch of index.hmtl"><br>
