--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Samoyeds tend to get along well with other dogs as well as people and with other
 
 <video width="680" controls>
   <source src="media/windowdog.mp4" type="video/mp4">
-</video>
+</video><br>
 
   	<form>
 		Name:
